deploy/app-secret.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
    service.alpha.openshift.io/dependencies: '[{"name": "mongodb",
      "kind": "Service"}]'
  name: nodejs-sample
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    name: nodejs-sample
