deploy/app-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: nodejs-sample
spec:
  to:
    kind: Service
    name: nodejs-sample
